fixed styling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,3 @@ body{
   -moz-box-sizing: border-box;
 }
 
-@media (max-width: 480px){
-  body, html, .fullHeight{
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-
-    margin: 0 auto;
-    min-height: 100vh;
-    width: 100%
-  
-  }
-}
